# shortmovie-draft-generator2

./: .clinerules  .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  cloudbuild.yaml  debug_transcript_to_draft.py  pyproject.toml  test_whisper_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  test.yml
output/: video_transcription.json
project/: draft_prompt.txt  hooks_prompt.txt  summary.md
src/: __init__.py  main.py
src/builders/: __init__.py  prompt_builder.py  prompt_builder_broken.py  prompt_builder_old.py
src/clients/: __init__.py  chatgpt_client.py  google_drive_client.py  slack_client.py  whisper_client.py
src/models/: __init__.py  draft.py  drive.py  hooks.py  result.py  transcription.py  usecase_results.py
src/service/: draft_generator.py  srt_generator.py
src/sources/: __init__.py  google_drive_video_source.py
src/tools/: __init__.py  extract_qa_segments.py  qa_segmenter.py
src/usecases/: generate_short_draft_usecase.py  google_drive_batch_process_usecase.py  transcript_to_draft_usecase.py  video_to_transcript_usecase.py
tasks/: 250109_2353_ショート動画設計図生成プロジェクト.md  250110_0030_Phase1_データ構造実装設計書.md  250110_0115_Phase2_PromptBuilder実装設計書.md  250110_0122_Phase3-1_ChatGPTClient実装設計書.md  250110_0128_Phase3-2_WhisperClient実装設計書.md  250110_0136_Phase4_DraftGenerator実装設計書.md  250110_1236_SRTGenerator切り出し設計書.md  250710_1458_GoogleDrive連携機能設計書.md  250710_1502_GoogleDrive連携機能設計書_修正版.md  250710_2100_GoogleDriveAPI実装変更設計書.md  250710_2136_サービスアカウント認証変更設計書.md  250710_2355_バッチ処理CLI機能拡張設計書.md  250711_0910_GoogleDriveバッチ処理機能拡張設計書.md  250711_1258_SlackClient実装設計書.md  250711_1758_GoogleDriveバッチ処理Slack通知統合設計書.md  250712_0147_2段階動画企画生成ロジック設計書.md  250712_1405_Usecaseリファクタリング設計書.md  250712_1439_2段階動画企画生成リファクタリング設計書.md  250712_1535_GoogleDriveバッチ処理Slack通知機能設計書.md
terraform/: .gitignore  CLAUDE.md  README.md
terraform/environments/production/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: .terraform.lock.hcl  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
terraform/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-build/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_run_job/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_scheduler/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud_scheduler_job/: main.tf  variables.tf
terraform/modules/secret_manager/: main.tf  outputs.tf  variables.tf
terraform/modules/service_account/: main.tf  outputs.tf  variables.tf
tests/test_builders/: __init__.py  test_prompt_builder.py
tests/test_clients/: test_chatgpt_client.py  test_google_drive_client_extensions.py  test_slack_client.py
tests/test_models/: __init__.py  test_draft.py  test_result.py  test_transcription.py
tests/test_service/: test_draft_generator.py  test_srt_generator.py
tests/test_usecases/: test_generate_short_draft_usecase.py  test_google_drive_batch_process_usecase.py
