[project]
name = "shortmovie-draft-generator2"
version = "0.1.0"
description = "ショート動画設計図生成プロジェクト"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "openai>=1.0.0,<2",
    "python-dotenv>=1.0.0,<2",
    "click>=8.0.0,<9",
    "ffmpeg-python>=0.2.0,<0.3",
    "requests>=2.31.0,<3",
    "google-auth>=2.23.0,<3",
    "google-auth-oauthlib>=1.1.0,<2",
    "google-auth-httplib2>=0.2.0,<0.3",
    "google-api-python-client>=2.100.0,<3",
]

[project.scripts]
shortmovie-draft-generator = "src.main:main"

[dependency-groups]
dev = [
    "mypy>=1.0.0,<2",
    "pytest>=7.0.0,<8",
    "black>=23.0.0,<24",
    "flake8>=6.0.0,<7",
    "pytest-cov>=4.0.0,<5",
    "types-requests>=2.32.4.20250611,<3",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "ffmpeg",
    "ffmpeg.*",
    "googleapiclient",
    "googleapiclient.*",
    "google.auth.*",
    "google.oauth2.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 160
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 160
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
